Added functions for fetching accent colors from Bing image search and for creating color bins

--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
     "eslint": "^3.19.0",
     "eslint-config-airbnb-base": "^11.1.2",
     "eslint-plugin-import": "^2.2.0"
+  },
+  "dependencies": {
+    "color-convert": "^1.9.0",
+    "node-bing-api": "^3.2.1"
   }
 }
