--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "dependencies": {
     "color": "^1.0.3",
-    "color-convert": "^1.9.0",
+    "color-diff": "^1.0.0",
+    "color-difference": "^0.3.4",
     "node-bing-api": "^3.2.1"
   }
 }
