--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "color-classifier",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "src/index.js",
   "scripts": {},
   "author": "Malachi Willey",
   "license": "ISC",
