--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "eslint": "^3.19.0",
     "eslint-config-airbnb-base": "^11.1.3",
     "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-mocha": "^4.9.0",
     "mocha": "^3.2.0",
+    "mocha-testcheck": "^0.1.2",
     "should": "^11.2.1"
   },
   "dependencies": {
