--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "color-classifier",
+  "name": "color-of",
   "version": "0.1.0",
   "description": "Javascript library for finding the the most representative color of a given search term. Matches to the nearest color of the provided palette.",
   "main": "lib/index.js",
