Added repo to package.json

--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "color-of",
   "version": "0.1.0",
   "description": "Javascript library for finding the the most representative color of a given search term. Matches to the nearest color of the provided palette.",
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/malwilley/color-of.git"
+  },
   "main": "lib/index.js",
   "scripts": {
     "test": "mocha"
