--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "color-of",
-  "version": "0.2.1",
+  "version": "0.3.0",
   "description": "Node library for finding the the most representative color of a given search term. Matches to the nearest color of the provided palette.",
   "keywords": [
     "color",
@@ -15,8 +15,11 @@
   "bugs": {
     "url": "https://github.com/malwilley/color-of/issues"
   },
-  "main": "lib/index.js",
+  "main": "dist/color-of.cjs.js",
+  "module": "dist/color-of.esm.js",
+  "browser": "dist/color-of.umd.js",
   "scripts": {
+    "build": "rollup -c",
     "test": "mocha"
   },
   "author": "Malachi Willey",
@@ -28,6 +31,9 @@
     "eslint-plugin-mocha": "^4.9.0",
     "mocha": "^3.2.0",
     "mocha-testcheck": "^0.1.2",
+    "rollup": "^0.48.2",
+    "rollup-plugin-commonjs": "^8.2.0",
+    "rollup-plugin-node-resolve": "^3.0.0",
     "should": "^11.2.1"
   },
   "dependencies": {
