--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
   "module": "dist/color-of.esm.js",
   "browser": "dist/color-of.umd.js",
   "scripts": {
+    "prebuild": "rm -rf dist/*",
     "build": "rollup -c",
+    "pretest": "npm run build",
     "test": "mocha"
   },
   "author": "Malachi Willey",
   "license": "MIT",
   "devDependencies": {
+    "buble": "^0.15.2",
     "eslint": "^3.19.0",
     "eslint-config-airbnb-base": "^11.1.3",
     "eslint-plugin-import": "^2.2.0",
@@ -33,6 +36,9 @@
     "mocha-testcheck": "^0.1.2",
     "rollup": "^0.48.2",
     "rollup-plugin-commonjs": "^8.2.0",
+    "rollup-plugin-json": "^2.3.0",
+    "rollup-plugin-node-builtins": "^2.1.2",
+    "rollup-plugin-node-globals": "^1.1.0",
     "rollup-plugin-node-resolve": "^3.0.0",
     "should": "^11.2.1"
   },
@@ -40,7 +46,7 @@
     "color": "^1.0.3",
     "color-diff": "^1.0.0",
     "google-images": "^2.1.0",
-    "node-bing-api": "^3.2.1",
-    "node-vibrant": "^3.0.0-alpha.2"
+    "node-vibrant": "^3.0.0-alpha.2",
+    "popsicle": "^9.1.0"
   }
 }
