Added filesize plugin for rollup

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mocha-testcheck": "^0.1.2",
     "rollup": "^0.48.2",
     "rollup-plugin-commonjs": "^8.2.0",
+    "rollup-plugin-filesize": "^1.4.2",
     "rollup-plugin-json": "^2.3.0",
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-globals": "^1.1.0",
