--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "mocha": "^3.2.0",
     "mocha-testcheck": "^0.1.2",
     "rollup": "^0.48.2",
+    "rollup-plugin-buble": "^0.16.0",
     "rollup-plugin-commonjs": "^8.2.0",
     "rollup-plugin-filesize": "^1.4.2",
     "rollup-plugin-json": "^2.3.0",
