--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "prebuild": "rm -rf dist/*",
     "build": "rollup -c",
     "pretest": "npm run build",
-    "test": "mocha"
+    "test": "mocha --require reify"
   },
   "author": "Malachi Willey",
   "license": "MIT",
@@ -34,6 +34,7 @@
     "eslint-plugin-mocha": "^4.9.0",
     "mocha": "^3.2.0",
     "mocha-testcheck": "^0.1.2",
+    "reify": "^0.12.3",
     "rollup": "^0.48.2",
     "rollup-plugin-buble": "^0.16.0",
     "rollup-plugin-commonjs": "^8.2.0",
